Fix border bug on mobile

--- a/src/Components/WarehouseAdd/WarehouseAdd.scss
+++ b/src/Components/WarehouseAdd/WarehouseAdd.scss
@@ -4,23 +4,22 @@
 
 .whcard {
     &__content-wrp {
-        @include main-padding;
         border-top: 1px solid $cloud;
         @include tablet {
             display: flex;
+            padding-top: 1.25rem;
+            padding-bottom: 1.25rem;
             width: 100%;
         }
     }
 
     &__details-wrp {
+        @include main-padding;
         display: flex;
         flex-direction: column;
-        padding-bottom: 1rem;
 
         @include tablet {
             width: 50%;
-            padding-top: 1rem;
-            padding-right: 2rem;
             border-right: solid 1px $cloud;
         }
     }
@@ -74,15 +73,14 @@
     }
 
     &__contact-wrp {
+        @include main-padding;
         display: flex;
         flex-direction: column;
         border-top: solid 1px $cloud;
-        padding-top: 1rem;
 
         @include tablet {
             width: 50%;
             border-top: none;
-            padding-left: 2rem;
         }
     }
 
